# githasher

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  config.json  fly.toml  rebuild.sh  vcpkg.json
src/: main.cpp
src/api/: HashController.hpp
src/domain/: RepoProcessor.hpp
src/service/: GitHubService.cpp
static/: index.html
